fix overflow issue with popovers

--- a/src/app/public/modules/progress-indicator/progress-indicator.component.scss
+++ b/src/app/public/modules/progress-indicator/progress-indicator.component.scss
@@ -39,6 +39,12 @@
   }
 }
 
+::ng-deep .sky-popover {
+  ::ng-deep .sky-progress-indicator-mode-vertical {
+      min-width: auto;
+  }
+}
+
 .sky-progress-indicator-mode-horizontal {
   /**
    * Overwrite item styles for vertical display mode.
